--- a/facefeg/src/App.css
+++ b/facefeg/src/App.css
@@ -14,6 +14,20 @@
   color: white;
 }
 
+.particles{
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.center{
+  display: flex;
+  justify-content: center;
+}
+
 .App-title {
   font-size: 1.5em;
 }
